# tauri-fastapi-full-stack-template

./: .gitignore  FUTURE_WORK.md  INTEGRATION_PLAN.md  Makefile  README.md  package.json
docs/: IPC.md  data-management.md  dmabuf-shared-memory.md
fastapi/: alembic.ini  build.py  pyproject.toml
fastapi/app/: crud.py  initial_data.py  main.py  models.py  prestart.py
fastapi/app/alembic/: env.py
fastapi/app/alembic/versions/: f854aec69c0f_initial_tables_user_and_item.py
fastapi/app/api/: deps.py  main.py
fastapi/app/api/routes/: items.py  login.py  users.py  window.py
fastapi/app/core/: config.py  db.py  logging.py  security.py
fastapi/specs/: fastapi-server.spec
frontend/: openapi.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  DeleteUser.tsx  EditUser.tsx
frontend/src/components/Items/: AddItem.tsx  DeleteItem.tsx  EditItem.tsx
frontend/src/components/UserSettings/: ChangePassword.tsx  DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/hooks/: useAuth.ts  useTrayNotification.ts
frontend/src/routes/: login.tsx  recover-password.tsx  reset-password.tsx
frontend/src/routes/_layout/: admin.tsx  index.tsx  items.tsx
scripts/: generate-client.sh
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/binaries/: .gitkeep
tauri/capabilities/: default.json
tauri/src/: config.rs  lib.rs  socket_server.rs
tauri/src/client/: Cargo.toml
tauri/src/client/src/apis/: mod.rs  (+5 more)
(+17 files in other folders)
