[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for Tauri desktop app"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.114.0,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
